# django-mirrorfields

./: .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
django_mirrorfields/: apps.py  urls.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: README.md  settings.py  test_models.py  urls.py
